--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Macondo&display=swap');
+
+body {
+  font-family: 'Macondo', sans-serif;
+}
+
 img {
   width: 30vw;
   padding: 1vw;
@@ -16,7 +22,23 @@ img {
   justify-content: space-around;
 }
 
-.cardTitle {
+.cardTitle,
+.titleText {
   text-align: center;
   padding-bottom: 2px;
+}
+
+.header {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.titleText {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.scoreboard {
+  text-align: right;
 }
